--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,9 @@
     </dependencies>
 
     <build>
-        <finalName>maven-bdd-test</finalName>
         <plugins>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -103,18 +104,21 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
                 <configuration>
-                    <!--<includes>
+                    <includes>
                         <include>**/reg_001_jetsmartRunner.java</include>
                     </includes>
                     <parallel>methods</parallel>
                     <threadCount>4</threadCount>
-                    <useUnlimitedThreads>false</useUnlimitedThreads>-->
-                    <suiteXmlFiles>
+                    <useUnlimitedThreads>false</useUnlimitedThreads>
+                    <!--<suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
+                    </suiteXmlFiles>-->
                 </configuration>
             </plugin>
 
+
         </plugins>
     </build>
+
+    
 </project>
