--- a/pom.xml
+++ b/pom.xml
@@ -105,12 +105,14 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <includes>
-                        <include>**/reg_001_jetsmartRunner.java</include>
+                        <!--<include>**/reg_001_jetsmartRunner.java</include>-->
+                        <include>**/jetSmartG6.java</include>
                     </includes>
-                    <parallel>methods</parallel>
+
+                    <!--<parallel>methods</parallel>
                     <threadCount>4</threadCount>
                     <useUnlimitedThreads>false</useUnlimitedThreads>
-                    <!--<suiteXmlFiles>
+                    <suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>-->
                 </configuration>
